Fixed typed wrapping on mobile

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -106,6 +106,8 @@ body {
 
 .terminal-body {
     overflow-y: scroll;
+    overflow-x: initial;
+    word-wrap: break-word;
     width: 100%;
     margin-top: 0px;
     min-height: 100%;
@@ -130,6 +132,8 @@ body {
     font-size: 16px;
     margin-right: 0px;
     margin-left: 0px;
+    overflow-x: initial;
+    word-wrap: break-word;
 }
 
 .invisible {
